# Cocktail-Party

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_SCHEMA.md  Dockerfile  MOUTH_DETECTION_GUIDE.md  Makefile  PROJECT_OVERVIEW.html  PROJECT_OVERVIEW.md  README.md  README_VIDEO.md  docker-compose.yml  mouth_open_detector.py  mouth_open_detector_improved.py  requirements_video_analysis.txt  test_setup.py  video_analysis_with_face_recognition.py
.github/workflows/: deploy.yml
Audio_Analysis/: ai_tts.py  requirements.txt
Video_Analysis/: ARCHITECTURE_SCHEMA.md  MOUTH_DETECTION_GUIDE.md  README.md  README_VIDEO.md  TRANSCRIPTION_CONFIG.md  VIDEO_ANALYSIS_GUIDE.md  audio_only.py  audio_streaming_example.py  discussion.rttm  mouth_open_detector.py  mouth_open_detector_improved.py  requirements.txt  requirements_video_analysis.txt  simple_video_demo.py  video_analysis_template.py  video_analysis_with_face_recognition.py  video_analysis_with_tracking.py  video_audio_threaded.py
app/: README.md  llm_client.py  local_party.py  local_voice_chat_advanced.py  pyproject.toml  utilities.py
local-voice-ai-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  generate-certs.sh  llm_client.py  local_party.py  local_voice_chat_advanced.py  pyproject.toml  speaker_diarizer.py  utilities.py
scripts/: lint.sh
