[project]
name = "local-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastrtc[stt]>=0.0.19",
    "kokoro-onnx>=0.4.7",
    "loguru>=0.7.3",
    "ollama>=0.4.7",
    "gradio>=4.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "anthropic>=0.40.0",
    "resemblyzer>=0.1.3",
    "openai>=1.0.0",
]

# Note: Speaker diarization now uses Resemblyzer (included in main dependencies)
# which works on CPU without requiring PyTorch/GPU
